--- a/youtube-tweaks.user.styl
+++ b/youtube-tweaks.user.styl
@@ -6,13 +6,14 @@
 @author         StylusThemes <https://github.com/StylusThemes>
 @homepageURL    https://github.com/StylusThemes/YouTube-Tweaks
 @supportURL     https://github.com/StylusThemes/YouTube-Tweaks/issues
-@updateURL      https://raw.githubusercontent.com/StylusThemes/YouTube-Tweaks/master/youtube-tweaks.user.styl
+@updateURL      https://raw.githubusercontent.com/StylusThemes/YouTube-Tweaks/Stylus_convert/youtube-tweaks.user.styl
 @preprocessor   stylus
 @license        CC-BY-SA-4.0
 
 @var number videos-per-row "Videos per row" 0
 @var checkbox compact-header-bar "Compact header bar" 0
 @var checkbox font-size "Video grid: Decrease font size" 0;
+@var checkbox no-rounded-corners "Square Youtube" 0
 @var checkbox no-shorts "Shorts blocker" 0
 @var checkbox no-promo-bar "No promo bar" 0
 @var checkbox search-dismissible "No irrelevant search results" 0
@@ -29,9 +30,13 @@
   i=!important;
   t=transparent;
 
-  #copyright div::after {
-    white-space: pre;
-    content: "\aYoutube Tweaks - Version 2.0.0";
+  #copyright {
+    div {
+      &::after {
+        white-space: pre;
+        content: "\aYoutube Tweaks - Version 2.0.0";
+      }
+    }
   }
 
   ::-webkit-scrollbar {
@@ -65,9 +70,11 @@
       order: -1;
     }
 
-    #home-container-media .rich-grid-media-skeleton {
-      max-width: "calc(100%/%s - 16px)" % videos-per-row i;
-      min-width: "calc(100%/%s - 16px)" % videos-per-row i;
+    #home-container-media {
+      .rich-grid-media-skeleton {
+        max-width: "calc(100%/%s - 16px)" % videos-per-row i;
+        min-width: "calc(100%/%s - 16px)" % videos-per-row i;
+      }
     }
 
     ytd-rich-grid-media[mini-mode],
@@ -125,8 +132,10 @@
     }
   }
 
-  #content.ytd-rich-section-renderer {
-    margin: 0 8px;
+  #content {
+    &.ytd-rich-section-renderer {
+      margin: 0 8px;
+    }
   }
 
   ytd-rich-item-renderer[rendered-from-rich-grid] {
@@ -135,9 +144,13 @@
     margin-right: calc(var(--ytd-rich-grid-item-margin)/2) i;
   }
 
-  [is-default-grid] > #contents.ytd-rich-grid-renderer {
-    width: calc(100% - 32px);
-    max-width: calc(var(--ytd-rich-grid-items-per-row) * (var(--ytd-rich-grid-item-max-width) + var(--ytd-rich-grid-item-margin)));
+  [is-default-grid] {
+    & > #contents {
+      &.ytd-rich-grid-renderer {
+        width: calc(100% - 32px);
+        max-width: calc(var(--ytd-rich-grid-items-per-row) * (var(--ytd-rich-grid-item-max-width) + var(--ytd-rich-grid-item-margin)));
+      }
+    }
   }
 
   .skeleton-bg-color.ytd-ghost-grid-renderer,
@@ -254,8 +267,10 @@
       --ytd-rich-grid-chips-bar-top: var(--ytd-toolbar-height);
     }
 
-    ytd-app:not([scrolling]) {
-      --ytd-masthead-height: var(--ytd-toolbar-height) i;
+    ytd-app {
+      &:not([scrolling]) {
+        --ytd-masthead-height: var(--ytd-toolbar-height) i;
+      }
     }
 
     .ytd-masthead:is(#container, #background),
@@ -264,8 +279,12 @@
       height: var(--ytd-toolbar-height);
     }
 
-    #player.skeleton.theater {
-      margin-top: var(--ytd-toolbar-height);
+    #player {
+      &.skeleton {
+        &.theater {
+          margin-top: var(--ytd-toolbar-height);
+        }
+      }
     }
 
     .ytd-searchbox:is(#search-form, #search-icon-legacy) {
@@ -280,9 +299,11 @@
       padding: 3px;
     }
 
-    yt-icon.ytd-logo {
-      padding-top: 8px;
-      padding-bottom: 8px;
+    yt-icon {
+      &.ytd-logo {
+        padding-top: 8px;
+        padding-bottom: 8px;
+      }
     }
 
     #container.ytd-masthead,
@@ -297,99 +318,104 @@
     display: none if no-recomendations-bar;
   }
 
-  ytd-rich-section-renderer:has([is-post]) {
-    display: none if no-yt-posts;
+  ytd-rich-section-renderer {
+    &:has([is-post]) {
+      display: none if no-yt-posts;
+    }
   }
 
   if youtube-watched-badge {
     @font-face {
       font-family: "FontAwesome";
+      src: url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.eot?v=4.7.0");
+      src: url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.eot?#iefix&v=4.7.0") format("embedded-opentype"),
+           url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.woff2?v=4.7.0") format("woff2"),
+           url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.woff?v=4.7.0") format("woff"),
+           url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.ttf?v=4.7.0") format("truetype"),
+           url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
       font-weight: normal;
       font-style: normal;
-      src: url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.eot?v=4.7.0");
-      src: url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.eot?#iefix&v=4.7.0") format("embedded-opentype"), url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.woff?v=4.7.0") format("woff"), url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
     }
 
-    .ytd-browse yt-formatted-string.ytd-thumbnail-overlay-playback-status-renderer {
-      display: none;
+    ytd-browse {
+      yt-formatted-string {
+        &.ytd-thumbnail-overlay-playback-status-renderer {
+          display: none;
+        }
+      }
     }
 
     ytd-thumbnail-overlay-resume-playback-renderer {
       width: 100%;
       height: 100%;
-      background-color: #030303;
-      opacity: 0.85;
+      opacity: .95;
       transition: opacity 200ms ease-out;
+      background-color: #030303;
+      div#progress {
+        &:after {
+          content: "\f00c";
+          visibility: visible;
+          font-family: "FontAwesome";
+          left: 50%;
+          font-size: 32px;
+          opacity: .7;
+          position: absolute;
+          top: 50%;
+          margin-top: -14px;
+          margin-left: -14px;
+          color: #fff;
+        }
+      }
+      &:hover {
+        opacity: 0 i;
+      }
     }
-
-    ytd-thumbnail-overlay-resume-playback-renderer:before {
-      display: flex;
-      position: absolute;
-      top: 0;
-      z-index: 100;
-      width: 100%;
-      height: 100%;
-      font-family: "FontAwesome";
-      font-size: 32px;
-      color: #999;
-      opacity: 0.7;
-      transition: 0.1s ease;
-      content: url("https://raw.githubusercontent.com/StylusThemes/YouTube-Theater/master/images/watched.png");
-      align-items: center;
-      justify-content: center;
-    }
-
-    ytd-compact-video-renderer:hover #overlays,
-    ytd-video-renderer:hover #overlays,
-    ytd-grid-video-renderer:hover #overlays,
-    ytd-playlist-video-renderer:hover #overlays,
-    ytd-thumbnail:hover #overlays {
-      opacity: 0;
-    }
-
-    ytd-thumbnail #overlays {
-      height: 100%;
-      transition: 0.2s ease;
-    }
-
-    #progress.ytd-thumbnail-overlay-resume-playback-renderer {
-      height: 100%;
-      background-color: #3a0909;
-      opacity: 1;
-    }
-
-    .ytd-browse div#progress:after {
-      color: #fff;
+    #progress {
+      &.ytd-thumbnail-overlay-resume-playback-renderer {
+        height: 100%;
+        background: #111 i;
+      }
     }
   }
 }
 
 @-moz-document regexp("https?://www.youtube.com/watch.*"), regexp("https?://www.youtube.com/clip.*") {
   if theater {
-    ytd-watch-flexy[full-bleed-player]:not([fullscreen])[theater] #full-bleed-container.ytd-watch-flexy {
-      height: 100vh;
-      max-height: none;
-      margin-top: calc(0px - var(--ytd-toolbar-height));
+    ytd-watch-flexy[full-bleed-player]:not([fullscreen])[theater] {
+      #full-bleed-container {
+        &.ytd-watch-flexy {
+          height: 100vh;
+          max-height: none;
+          margin-top: calc(0px - var(--ytd-toolbar-height));
+        }
+      }
     }
 
-    #masthead-container.ytd-app [is-watch-page][theater]:not([fullscreen]) {
-      opacity: 0;
-      transition: opacity 0.1s ease-in;
+    #masthead-container {
+      &.ytd-app {
+        [is-watch-page][theater]:not([fullscreen]) {
+          opacity: 0;
+          transition: opacity 0.1s ease-in;
+        }
+        &:hover {
+          [theater]:not([fullscreen]) {
+            opacity: 1;
+            transition: opacity 0.1s ease-out;
+          }
+        }
+      }
     }
 
-    #masthead-container.ytd-app:hover [theater]:not([fullscreen]) {
-      opacity: 1;
-      transition: opacity 0.1s ease-out;
-    }
-
-    [theater]:not([fullscreen]) .ytp-cards-button-icon,
-    [theater]:not([fullscreen]) .ytp-share-icon,
-    [theater]:not([fullscreen]) .ytp-tooltip-text,
-    [theater]:not([fullscreen]) .ytp-cards-teaser,
-    [theater]:not([fullscreen]) .ytp-exp-ppp-update .ytp-paid-content-overlay-link,
-    [theater]:not([fullscreen]) .ytp-sfn,
-    [theater]:not([fullscreen]) .ytp-drawer {
-      margin-top: var(--ytd-toolbar-height);
+    [theater]:not([fullscreen]) {
+      .ytp-cards-button-icon,
+      .ytp-share-icon,
+      .ytp-tooltip-text,
+      .ytp-cards-teaser,
+      .ytp-exp-ppp-update .ytp-paid-content-overlay-link,
+      .ytp-sfn,
+      .ytp-drawer {
+        margin-top: var(--ytd-toolbar-height);
+      }
     }
   }
 
@@ -408,17 +434,13 @@
       display: none i;
     }
 
-    #flexible-item-buttons [aria-label="Promote"] {
-      display: none i;
-    }
-
-    #flexible-item-buttons [aria-label="Clip"] {
-      display: none i;
-    }
-
-    #flexible-item-buttons [aria-label="Thanks"],
-    #flexible-item-buttons [title="Show support with Super Thanks"] {
-      display: none i;
+    #flexible-item-buttons {
+      [aria-label="Promote"],
+      [aria-label="Clip"],
+      [aria-label="Thanks"],
+      [title="Show support with Super Thanks"] {
+        display: none i;
+      }
     }
   }
 
@@ -426,44 +448,50 @@
     @font-face {
       font-family: "Netflix Sans";
       font-weight: 100;
-      src: url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Th.woff2") format("woff2"), url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Th.woff") format("woff");
+      src: url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Th.woff2") format("woff2"),
+           url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Th.woff") format("woff");
     }
 
     @font-face {
       font-family: "Netflix Sans";
       font-weight: 300;
-      src: url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Lt.woff2") format("woff2"), url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Lt.woff") format("woff");
+      src: url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Lt.woff2") format("woff2"),
+           url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Lt.woff") format("woff");
     }
 
     @font-face {
       font-family: "Netflix Sans";
       font-weight: 400;
-      src: url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Rg.woff2") format("woff2"), url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Rg.woff") format("woff");
+      src: url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Rg.woff2") format("woff2"),
+           url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Rg.woff") format("woff");
     }
 
     @font-face {
       font-family: "Netflix Sans";
       font-weight: 700;
-      src: url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Md.woff2") format("woff2"), url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Md.woff") format("woff");
+      src: url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Md.woff2") format("woff2"),
+           url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Md.woff") format("woff");
     }
 
     @font-face {
       font-family: "Netflix Sans";
       font-weight: 800;
-      src: url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Bd.woff2") format("woff2"), url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Bd.woff") format("woff");
+      src: url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Bd.woff2") format("woff2"),
+           url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Bd.woff") format("woff");
     }
 
     @font-face {
       font-family: "Netflix Sans";
       font-weight: 900;
-      src: url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Blk.woff2") format("woff2"), url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Blk.woff") format("woff");
+      src: url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Blk.woff2") format("woff2"),
+           url("https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Blk.woff") format("woff");
     }
 
     .ytp-caption-segment {
       font-family: "Netflix Sans", sans-serif i;
       font-weight: 700 i;
       background: none i;
-      text-shadow: rgba(0, 0, 0, 1) 0 0 0.2em i;
+      text-shadow: #000 0 0 0.2em i;
     }
   }
 }
